deploy: 330ca0e9d7aef881f8ff38366046ef4cca1008bb

--- a/kartoffelpüree/index.html
+++ b/kartoffelpüree/index.html
@@ -11,12 +11,12 @@
 <meta name="twitter:title" content="Kartoffelpüree"/>
 <meta name="twitter:description" content="Kartoffelpüree ou la purée de pommes de terre # Temps 30 minutes
 Portions 4 portions
-Les ingrédients # 1 kg de pommes de terre épluchées 200 ml de lait chaud 4 c. à soupe de beurree Sel et poivre au goût La préparation # Les pommes de terre sont bouillies dans une casserole avec de l’eau salée. Elles sont cuites jusqu’à ce qu’elles deviennent molles. Environ 20 minutes. Après cela, vidangez l’eau."/>
+Les ingrédients # 1 kg de pommes de terre épluchées 200 ml de lait chaud 4 c. à soupe de beurre Sel et poivre au goût La préparation # Les pommes de terre sont bouillies dans une casserole avec de l’eau salée. Elles sont cuites jusqu’à ce qu’elles deviennent molles. Environ 20 minutes. Après cela, vidangez l’eau."/>
 
 <meta property="og:title" content="Kartoffelpüree" />
 <meta property="og:description" content="Kartoffelpüree ou la purée de pommes de terre # Temps 30 minutes
 Portions 4 portions
-Les ingrédients # 1 kg de pommes de terre épluchées 200 ml de lait chaud 4 c. à soupe de beurree Sel et poivre au goût La préparation # Les pommes de terre sont bouillies dans une casserole avec de l’eau salée. Elles sont cuites jusqu’à ce qu’elles deviennent molles. Environ 20 minutes. Après cela, vidangez l’eau." />
+Les ingrédients # 1 kg de pommes de terre épluchées 200 ml de lait chaud 4 c. à soupe de beurre Sel et poivre au goût La préparation # Les pommes de terre sont bouillies dans une casserole avec de l’eau salée. Elles sont cuites jusqu’à ce qu’elles deviennent molles. Environ 20 minutes. Après cela, vidangez l’eau." />
 <meta property="og:type" content="article" />
 <meta property="og:url" content="/kartoffelp%C3%BCree/" /><meta property="article:section" content="posts" />
 
@@ -25,7 +25,7 @@ Les ingrédients # 1 kg de pommes de terre épluchées 200 ml de lait chaud 4 c.
 <meta itemprop="name" content="Kartoffelpüree">
 <meta itemprop="description" content="Kartoffelpüree ou la purée de pommes de terre # Temps 30 minutes
 Portions 4 portions
-Les ingrédients # 1 kg de pommes de terre épluchées 200 ml de lait chaud 4 c. à soupe de beurree Sel et poivre au goût La préparation # Les pommes de terre sont bouillies dans une casserole avec de l’eau salée. Elles sont cuites jusqu’à ce qu’elles deviennent molles. Environ 20 minutes. Après cela, vidangez l’eau.">
+Les ingrédients # 1 kg de pommes de terre épluchées 200 ml de lait chaud 4 c. à soupe de beurre Sel et poivre au goût La préparation # Les pommes de terre sont bouillies dans une casserole avec de l’eau salée. Elles sont cuites jusqu’à ce qu’elles deviennent molles. Environ 20 minutes. Après cela, vidangez l’eau.">
 
 <meta itemprop="wordCount" content="216">
 <meta itemprop="keywords" content="" />
@@ -49,7 +49,7 @@ Les ingrédients # 1 kg de pommes de terre épluchées 200 ml de lait chaud 4 c.
     "name": "Kartoffelpüree",
     "headline": "Kartoffelpüree",
     "alternativeHeadline": "",
-    "description": "Kartoffelpüree ou la purée de pommes de terre # Temps 30 minutes\nPortions 4 portions\nLes ingrédients # 1 kg de pommes de terre épluchées 200 ml de lait chaud 4 c. à soupe de beurree Sel et poivre au goût La préparation # Les pommes de terre sont bouillies dans une casserole avec de l’eau salée. Elles sont cuites jusqu’à ce qu’elles deviennent molles. Environ 20 minutes. Après cela, vidangez l’eau.",
+    "description": "Kartoffelpüree ou la purée de pommes de terre # Temps 30 minutes\nPortions 4 portions\nLes ingrédients # 1 kg de pommes de terre épluchées 200 ml de lait chaud 4 c. à soupe de beurre Sel et poivre au goût La préparation # Les pommes de terre sont bouillies dans une casserole avec de l’eau salée. Elles sont cuites jusqu’à ce qu’elles deviennent molles. Environ 20 minutes. Après cela, vidangez l’eau.",
     "inLanguage": "fr-fr",
     "isFamilyFriendly": "true",
     "mainEntityOfPage": {
@@ -150,7 +150,7 @@ Les ingrédients # 1 kg de pommes de terre épluchées 200 ml de lait chaud 4 c.
 <ul>
 <li>1 kg de pommes de terre épluchées</li>
 <li>200 ml de lait chaud</li>
-<li>4 c. à soupe de beurree</li>
+<li>4 c. à soupe de beurre</li>
 <li>Sel et poivre au goût</li>
 </ul>
 <h3 id="la-préparation"><strong>La préparation</strong> <a href="#la-pr%c3%a9paration" class="hash">#</a></h3>
