deploy: 52ee716da2d85ad8e451825419771381fd2c8bd7

--- a/diversité/index.html
+++ b/diversité/index.html
@@ -14,7 +14,7 @@
 <meta property="og:title" content="Variété de la pomme de terre" />
 <meta property="og:description" content="Quelques variétés de la Kartoffel # Les variétés de pommes de terre les plus connues sont probablement celles de couleur jaune. Toutefois, ce sont les variétés rouges qui arrivent en premier en Europe par l’Espagne. Les variétés jaunes arrivent plus tard en Angleterre. Alors qu’en 1777 40 variétés ont été enregistrées, en 1881 il y en a déjà 630. Aujourd’hui, selon certaines estimations, il existe plusieurs milliers de variétés. En 2010, 1284 variétés sont officiellement enregistrées dans le catalogue communautaire européen." />
 <meta property="og:type" content="article" />
-<meta property="og:url" content="/vari%C3%A9t%C3%A9/" /><meta property="article:section" content="posts" />
+<meta property="og:url" content="/diversit%C3%A9/" /><meta property="article:section" content="posts" />
 
 
 
@@ -23,7 +23,7 @@
 
 <meta itemprop="wordCount" content="191">
 <meta itemprop="keywords" content="" />
-  <link rel="canonical" href="../vari%C3%A9t%C3%A9/">
+  <link rel="canonical" href="../diversit%C3%A9/">
   <link rel="dns-prefetch" href="https://www.google-analytics.com">
   <link href="https://www.google-analytics.com" rel="preconnect" crossorigin>
   <link rel="alternate" type="application/atom+xml" title="La Kartoffel" href="../atom.xml" />
@@ -48,7 +48,7 @@
     "isFamilyFriendly": "true",
     "mainEntityOfPage": {
         "@type": "WebPage",
-        "@id": "\/vari%C3%A9t%C3%A9\/"
+        "@id": "\/diversit%C3%A9\/"
     },
     "author" : {
         "@type": "Person",
@@ -79,7 +79,7 @@
         }
     },
     "image": "/images/Kartoffelpflanze.jpg",
-    "url" : "\/vari%C3%A9t%C3%A9\/",
+    "url" : "\/diversit%C3%A9\/",
     "wordCount" : "191",
     "genre" : [ ],
     "keywords" : [ ]
