--- a/röstkartoffeln/index.html
+++ b/röstkartoffeln/index.html
@@ -18,7 +18,7 @@ Les ingrédients # 1.75 kg de pommes de terre 1 oignon moyen 250 g de lardons fu
 Portions 4 portions
 Les ingrédients # 1.75 kg de pommes de terre 1 oignon moyen 250 g de lardons fumés 5 c. à soupe de beurre clarifié 1 c. à soupe de gros sel Sel et poivre au goût La préparation # Peler les oignons et les pommes de terre. Couper les oignons en petits cubes. Coupez les pommes de terre en tranches fines." />
 <meta property="og:type" content="article" />
-<meta property="og:url" content="/bratkartoffeln/" /><meta property="article:section" content="posts" />
+<meta property="og:url" content="/r%C3%B6stkartoffeln/" /><meta property="article:section" content="posts" />
 
 
 
@@ -29,7 +29,7 @@ Les ingrédients # 1.75 kg de pommes de terre 1 oignon moyen 250 g de lardons fu
 
 <meta itemprop="wordCount" content="190">
 <meta itemprop="keywords" content="" />
-  <link rel="canonical" href="../bratkartoffeln/">
+  <link rel="canonical" href="../r%C3%B6stkartoffeln/">
   <link rel="dns-prefetch" href="https://www.google-analytics.com">
   <link href="https://www.google-analytics.com" rel="preconnect" crossorigin>
   <link rel="alternate" type="application/atom+xml" title="La Kartoffel" href="../atom.xml" />
@@ -54,7 +54,7 @@ Les ingrédients # 1.75 kg de pommes de terre 1 oignon moyen 250 g de lardons fu
     "isFamilyFriendly": "true",
     "mainEntityOfPage": {
         "@type": "WebPage",
-        "@id": "\/bratkartoffeln\/"
+        "@id": "\/r%C3%B6stkartoffeln\/"
     },
     "author" : {
         "@type": "Person",
@@ -85,7 +85,7 @@ Les ingrédients # 1.75 kg de pommes de terre 1 oignon moyen 250 g de lardons fu
         }
     },
     "image": "/images/Kartoffelpflanze.jpg",
-    "url" : "\/bratkartoffeln\/",
+    "url" : "\/r%C3%B6stkartoffeln\/",
     "wordCount" : "190",
     "genre" : [ ],
     "keywords" : [ ]
