deploy: 41a3af2dce967c9eb3fc2b522cb1b31e85645491

--- a/kartoffelsalat/index.html
+++ b/kartoffelsalat/index.html
@@ -169,7 +169,7 @@ Les ingrédients # 1.5 kg de pomme de terre 2 oignons moyens 7 cl d’huile 1 c.
 </ol>
 <h3 id="mon-conseil"><strong>Mon conseil</strong> <a href="#mon-conseil" class="hash">#</a></h3>
 <p>Le <em>Kartoffelsalat</em> est un véritable classique en Allemagne. Une fois que vous commencez à le manger, vous ne pouvez plus vous arrêter. Dans ma famille, nous en mangeons toujours à Pâques, mais traditionnellement, la plupart des familles allemandes le mangent à Noël. En effet, 19  % des Allemands mangent <em>Kartoffelsalat</em> à Noël et en Allemagne de l’Est, c’est même 40  %. Ensuite, le <em>Kartoffelsalat</em> est combiné avec des <em>Bockwürsten</em> <sup id="fnref:1"><a href="#fn:1" class="footnote-ref" role="doc-noteref">1</a></sup>. Cette tradition vient du fait que Noël en Allemagne se célèbre le soir du 24 décembre alors que de nombreuses familles doivent encore travailler toute la journée du 24. Par conséquent, la combinaison de <em>Kartoffelsalat</em> et de <em>Bockwürsten</em> est très pratique. Les Bockwürste sont cuites en quelques minutes et le <em>Kartoffelsalat</em> peut être préparé à l’avance. En effet, je trouve que le <em>Kartoffelsalat</em> a encore meilleur goût lorsqu’il est laissé au réfrigérateur pendant quelques jours avant d’être consommé. Essayez vous-même si vous aimez le plat que des millions d’Allemands mangent chaque année à Noël.</p>
-<p><a href="https://xlilix2312.github.io/Kartoffel/bratkartoffeln/">Aller à la recette <em>Bratkartoffeln</em></a></p>
+<p><a href="https://xlilix2312.github.io/Kartoffel/r%C3%B6stkartoffeln/">Aller à la recette <em>Röstkartoffeln</em></a></p>
 <div class="footnotes" role="doc-endnotes">
 <hr>
 <ol>
