deploy: 5708b7453e4df776c7cf0c6c75e62d65c19bf77e

--- a/histoire/index.html
+++ b/histoire/index.html
@@ -21,7 +21,7 @@
 <meta itemprop="name" content="Histoire de la pomme de terre">
 <meta itemprop="description" content="L’histoire de la Kartoffel en un coup d’œil # La Kartoffel ou la pomme de terre provient à l’origine de la Cordillère des Andes. Là, elle poussait à l’état sauvage. Elle a été baptisée par les Incas avec le nom de « papa » et activement cultivé par eux à partir du 13ème siècle. Au 16ème siècle, elle a été introduite en Europe par les colonisateurs espagnols. En Espagne, elle a reçu le nom de « patata ».">
 
-<meta itemprop="wordCount" content="327">
+<meta itemprop="wordCount" content="328">
 <meta itemprop="keywords" content="" />
   <link rel="canonical" href="../histoire/">
   <link rel="dns-prefetch" href="https://www.google-analytics.com">
@@ -80,7 +80,7 @@
     },
     "image": "/images/Kartoffelpflanze.jpg",
     "url" : "\/histoire\/",
-    "wordCount" : "327",
+    "wordCount" : "328",
     "genre" : [ ],
     "keywords" : [ ]
 }
@@ -149,7 +149,7 @@ Désormais, la pomme de terre devient de plus en plus importante et ne cesse de 
 <blockquote>
 <p>Quand il y a de l&rsquo;amour, il n&rsquo;est pas difficile de couper la pomme de terre en deux. <sup id="fnref:2"><a href="#fn:2" class="footnote-ref" role="doc-noteref">2</a></sup></p>
 </blockquote>
-<p><a href="https://xlilix2312.github.io/Kartoffel/diversit%C3%25">En savoir plus sur les variétés de pomme de terre</a></p>
+<p><a href="https://xlilix2312.github.io/Kartoffel/diversit%C3%25/">En savoir plus sur la diversité de la pomme de terre</a></p>
 <div class="footnotes" role="doc-endnotes">
 <hr>
 <ol>
