--- a/kartoffelauflauf/index.html
+++ b/kartoffelauflauf/index.html
@@ -160,10 +160,10 @@ Les ingrédients # 1 kg de pomme de terre 100 g de gruyère râpé 85 g de beurr
 <li>Graisser un plat allant au four avec du beurre. Répartir toutes les tranches fines de pommes de terre dans le plat allant au four. Ajouter le gruyère râpé.</li>
 <li>Étaler des cubes de beurre sur le gruyère râpé.</li>
 <li>Maintenant, versez le bouillon sur le plat allant au four.</li>
-<li>Cuire le Kartoffelauflauf au moins 40 minutes à 200 degrés Celsius. Le bouillon doit être complètement absorbé par les pommes de terre à la fin.</li>
+<li>Cuire le <em>Kartoffelauflauf</em> au moins 40 minutes à 200 degrés Celsius. Le bouillon doit être complètement absorbé par les pommes de terre à la fin.</li>
 </ol>
 <h3 id="mon-conseil"><strong>Mon conseil</strong> <a href="#mon-conseil" class="hash">#</a></h3>
-<p>En fait, le Kartoffelauflauf est une recette que je n’ai connue que récemment, mais qui a immédiatement conquis mon estomac et mon cœur. Lorsque j’ai préparé ce plat pour la première fois pour ma famille, chaque membre de la famille a tout de suite adoré cette recette. En effet, c’est le plat préféré de ma sœur depuis. À mon avis, ce plat se marie bien avec le poisson cuit au four.</p>
+<p>En fait, le <em>Kartoffelauflauf</em> est une recette que je n’ai connue que récemment, mais qui a immédiatement conquis mon estomac et mon cœur. Lorsque j’ai préparé ce plat pour la première fois pour ma famille, chaque membre de la famille a tout de suite adoré cette recette. En effet, c’est le plat préféré de ma sœur depuis. À mon avis, ce plat se marie bien avec le poisson cuit au four.</p>
 <p><a href="https://xlilix2312.github.io/Kartoffel/kartoffelpuffer/">Aller à la recette <em>Kartoffelpuffer</em></a></p>
 
       </div>
