--- a/print/index.html
+++ b/print/index.html
@@ -192,7 +192,7 @@ Désormais, la pomme de terre devient de plus en plus importante et ne cesse de 
 <blockquote>
 <p>Quand il y a de l&rsquo;amour, il n&rsquo;est pas difficile de couper la pomme de terre en deux. <sup id="fnref:2"><a href="#fn:2" class="footnote-ref" role="doc-noteref">2</a></sup></p>
 </blockquote>
-<p><a href="https://xlilix2312.github.io/Kartoffel/diversit%C3%25">En savoir plus sur les variétés de pomme de terre</a></p>
+<p><a href="https://xlilix2312.github.io/Kartoffel/diversit%C3%25/">En savoir plus sur la diversité de la pomme de terre</a></p>
 <div class="footnotes" role="doc-endnotes">
 <hr>
 <ol>
@@ -231,10 +231,10 @@ Désormais, la pomme de terre devient de plus en plus importante et ne cesse de 
 <li>Graisser un plat allant au four avec du beurre. Répartir toutes les tranches fines de pommes de terre dans le plat allant au four. Ajouter le gruyère râpé.</li>
 <li>Étaler des cubes de beurre sur le gruyère râpé.</li>
 <li>Maintenant, versez le bouillon sur le plat allant au four.</li>
-<li>Cuire le Kartoffelauflauf au moins 40 minutes à 200 degrés Celsius. Le bouillon doit être complètement absorbé par les pommes de terre à la fin.</li>
+<li>Cuire le <em>Kartoffelauflauf</em> au moins 40 minutes à 200 degrés Celsius. Le bouillon doit être complètement absorbé par les pommes de terre à la fin.</li>
 </ol>
 <h3 id="mon-conseil"><strong>Mon conseil</strong> <a href="#mon-conseil" class="hash">#</a></h3>
-<p>En fait, le Kartoffelauflauf est une recette que je n’ai connue que récemment, mais qui a immédiatement conquis mon estomac et mon cœur. Lorsque j’ai préparé ce plat pour la première fois pour ma famille, chaque membre de la famille a tout de suite adoré cette recette. En effet, c’est le plat préféré de ma sœur depuis. À mon avis, ce plat se marie bien avec le poisson cuit au four.</p>
+<p>En fait, le <em>Kartoffelauflauf</em> est une recette que je n’ai connue que récemment, mais qui a immédiatement conquis mon estomac et mon cœur. Lorsque j’ai préparé ce plat pour la première fois pour ma famille, chaque membre de la famille a tout de suite adoré cette recette. En effet, c’est le plat préféré de ma sœur depuis. À mon avis, ce plat se marie bien avec le poisson cuit au four.</p>
 <p><a href="https://xlilix2312.github.io/Kartoffel/kartoffelpuffer/">Aller à la recette <em>Kartoffelpuffer</em></a></p>
 
     </div>
@@ -266,7 +266,7 @@ Désormais, la pomme de terre devient de plus en plus importante et ne cesse de 
 <li>Faire chauffer l&rsquo;huile dans une poêle et y faire cuire.</li>
 </ol>
 <h3 id="mon-conseil"><strong>Mon conseil</strong> <a href="#mon-conseil" class="hash">#</a></h3>
-<p>Kartoffelpuffer sont servies des manières différentes dans différentes régions d’Allemagne, mais aussi dans différentes parties du monde. Personnellement, je les mange avec de la compote de pommes ce qui est délicieux. J’ai de très bons souvenirs d’enfance de manger des Kartoffelpuffer avec de la compote de pommes sur la plage dans le nord de l’Allemagne. Sinon, une autre option sucrée est de manger les Kartoffelpuffer avec de la confiture. Ici, la confiture de groseilles ou de prunes est particulièrement appropriée. Cette combinaison a encore meilleur goût avec de la confiture maison. En revanche, une amie de Pologne les mange toujours de manière salée. Elle préfère le fromage blanc, mais d’autres variantes populaires en Pologne sont la crème fraîche, le fromage cottage ou le gruyère. Choisissez ce que vous voulez  !</p>
+<p><em>Kartoffelpuffer</em> sont servies des manières différentes dans différentes régions d’Allemagne, mais aussi dans différentes parties du monde. Personnellement, je les mange avec de la compote de pommes ce qui est délicieux. J’ai de très bons souvenirs d’enfance de manger des <em>Kartoffelpuffer</em> avec de la compote de pommes sur la plage dans le nord de l’Allemagne. Sinon, une autre option sucrée est de manger les <em>Kartoffelpuffer</em> avec de la confiture. Ici, la confiture de groseilles ou de prunes est particulièrement appropriée. Cette combinaison a encore meilleur goût avec de la confiture maison. En revanche, une amie de Pologne les mange toujours de manière salée. Elle préfère le fromage blanc, mais d’autres variantes populaires en Pologne sont la crème fraîche, le fromage cottage ou le gruyère. Choisissez ce que vous voulez  !</p>
 <p><a href="https://xlilix2312.github.io/Kartoffel/kartoffelp%C3%BCree/">Aller à la recette <em>Kartoffelpüree</em></a></p>
 
     </div>
@@ -297,8 +297,8 @@ Désormais, la pomme de terre devient de plus en plus importante et ne cesse de 
 <li>Ajoutez encore du beurre ou du lait si vous voulez que le mélange soit plus liquide. Salez et poivrez au goût.</li>
 </ol>
 <h3 id="mon-conseil"><strong>Mon conseil</strong> <a href="#mon-conseil" class="hash">#</a></h3>
-<p>Personnellement, j’adore mon Kartoffelpüree liquide et sans morceaux. Cependant, les opinions en Allemagne différent considérablement ici. D’autres aiment les morceaux dans le Kartoffelpüree et ne l’aiment pas du tout quand elle est trop liquide. À vous d’essayer comment vous l’aimez le mieux  !
-De surcroît, Kartoffelpüree avec des bâtonnets de poisson est un repas pour enfants très populaire en Allemagne. Moi, j’aime toujours cette combinaison à ce jour et je ne peux que la recommander.</p>
+<p>Personnellement, j’adore mon <em>Kartoffelpüree</em> liquide et sans morceaux. Cependant, les opinions en Allemagne différent considérablement ici. D’autres aiment les morceaux dans le <em>Kartoffelpüree</em> et ne l’aiment pas du tout quand elle est trop liquide. À vous d’essayer comment vous l’aimez le mieux  !
+De surcroît, <em>Kartoffelpüree</em> avec des bâtonnets de poisson est un repas pour enfants très populaire en Allemagne. Moi, j’aime toujours cette combinaison à ce jour et je ne peux que la recommander.</p>
 <p><a href="https://xlilix2312.github.io/Kartoffel/kartoffelsalat/">Aller à la recette <em>Kartoffelsalat</em></a></p>
 
     </div>
@@ -377,7 +377,7 @@ De surcroît, Kartoffelpüree avec des bâtonnets de poisson est un repas pour e
 <li>Finalement, tout est mélangé et frit pendant quelques minutes de plus.</li>
 </ol>
 <h3 id="mon-conseil"><strong>Mon conseil</strong> <a href="#mon-conseil" class="hash">#</a></h3>
-<p>Bratkartoffeln sont un plat très populaire en Allemagne et elles sont souvent servies avec le Wiener Schnitzel typique. Cependant, ma façon préférée de les manger est avec un œuf au plat. La jaune d’œuf fond sur les Bratkartoffeln, ce qui crée une combinaison extrêmement savoureuse.</p>
+<p><em>Bratkartoffeln</em> sont un plat très populaire en Allemagne et elles sont souvent servies avec le Wiener Schnitzel typique. Cependant, ma façon préférée de les manger est avec un œuf au plat. La jaune d’œuf fond sur les <em>Bratkartoffeln</em>, ce qui crée une combinaison extrêmement savoureuse.</p>
 <p><a href="https://xlilix2312.github.io/Kartoffel/kartoffelauflauf/">Aller à la recette <em>Kartoffelauflauf</em></a></p>
 
     </div>
