deploy: e71fac933a57ba3a894b69a1cdf8af16f9e6697f

--- a/print/index.html
+++ b/print/index.html
@@ -6,18 +6,18 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="author" content="Ronalds Vilcins - /">
   <title>Impression | La Kartoffel</title>
-  <meta name="description" content="Description">
+  <meta name="description" content="Cette page informe sur l&#39;histoire, la diversité et les recettes de la pomme de terre">
 <meta name="twitter:card" content="summary"/>
 <meta name="twitter:title" content="Impression"/>
-<meta name="twitter:description" content="Description"/>
+<meta name="twitter:description" content="Cette page informe sur l&#39;histoire, la diversité et les recettes de la pomme de terre"/>
 
 <meta property="og:title" content="Impression" />
-<meta property="og:description" content="Description" />
+<meta property="og:description" content="Cette page informe sur l&#39;histoire, la diversité et les recettes de la pomme de terre" />
 <meta property="og:type" content="website" />
 <meta property="og:url" content="/print/" />
 
 <meta itemprop="name" content="Impression">
-<meta itemprop="description" content="Description">
+<meta itemprop="description" content="Cette page informe sur l&#39;histoire, la diversité et les recettes de la pomme de terre">
   <link rel="canonical" href="../print/">
   <link rel="dns-prefetch" href="https://www.google-analytics.com">
   <link href="https://www.google-analytics.com" rel="preconnect" crossorigin>
@@ -47,7 +47,7 @@
 <img src="../images/Kartoffelpflanze.jpg">
 
 <h3>ou la pomme de terre</h3>
-<h4 class="edition">Fabrique</h4>
+<h4 class="edition">Lili Ricke | 2023 | CC BY-NC-SA</h4>
 
     </section>
     <section class="toc">
