deploy: 121fd3ff3370f8dc06f9887510d09317f78bd8cf

--- a/histoire/index.html
+++ b/histoire/index.html
@@ -149,7 +149,7 @@ Désormais, la pomme de terre devient de plus en plus importante et ne cesse de 
 <blockquote>
 <p>Quand il y a de l&rsquo;amour, il n&rsquo;est pas difficile de couper la pomme de terre en deux. <sup id="fnref:2"><a href="#fn:2" class="footnote-ref" role="doc-noteref">2</a></sup></p>
 </blockquote>
-<p><a href="https://xlilix2312.github.io/Kartoffel/diversit%C3%25/">En savoir plus sur la diversité de la pomme de terre</a></p>
+<p><a href="https://xlilix2312.github.io/Kartoffel/diversit%C3%A9/">En savoir plus sur la diversité de la pomme de terre</a></p>
 <div class="footnotes" role="doc-endnotes">
 <hr>
 <ol>
