--- a/print/index.html
+++ b/print/index.html
@@ -222,7 +222,7 @@ Désormais, la pomme de terre devient de plus en plus importante et ne cesse de 
     <h3>Kartoffelauflauf</h3>
     <div class="contenu">
         <h2 id="kartoffelauflauf-ou-gratin-de-pommes-de-terre"><strong><em>Kartoffelauflauf</em> ou gratin de pommes de terre</strong> <a href="#kartoffelauflauf-ou-gratin-de-pommes-de-terre" class="hash">#</a></h2>
-<p><img src="../images/Kartoffelauf.JPG" alt="Le gratin de pommes de terre" loading="lazy" />
+<p><img src="../images/Kartoffelauflauf.jpg" alt="Le gratin de pommes de terre" loading="lazy" />
 </p>
 <p><strong>Temps</strong>       75 minutes</p>
 <p><strong>Portions</strong>    4 portions</p>
