deploy: 57510134b866d154b41d0ed65613064b3dac857a

--- a/print/index.html
+++ b/print/index.html
@@ -154,15 +154,21 @@ J&rsquo;espère que vous aimez ma page web et que je peux vous informer et diver
     <h2 class="titre-chapitre" id="Crédits"></h2>
     <h3>Crédits</h3>
     <div class="contenu">
-        <p>Crédits</p>
-<p>Auteur          Lili Ricke
-Institution     Université de Montréal
-Teacher         Margot Mellet
-Date            20.04.2023
-Cours           FRA3825 Pratiques de l&rsquo;edition numérique</p>
-<p>Les images  :
-Maciarka (1899, 30 novembre). <em>Zemiakové placky</em>[image en ligne]. Wikimedia Commons. <a href="https://upload.wikimedia.org/wikipedia/commons/e/e9/Zemiakov%C3%A9_placky_%E3%82%BC%E3%83%9F%E3%82%A2%E3%82%B3%E3%83%99%E3%83%BC%E3%83%BB%E3%83%97%E3%83%A9%E3%83%84%E3%82%AD%E3%83%BC.JPG">https://upload.wikimedia.org/wikipedia/commons/e/e9/Zemiakov%C3%A9_placky_%E3%82%BC%E3%83%9F%E3%82%A2%E3%82%B3%E3%83%99%E3%83%BC%E3%83%BB%E3%83%97%E3%83%A9%E3%83%84%E3%82%AD%E3%83%BC.JPG</a>.</p>
+        <h2 id="crédits"><strong>Crédits</strong> <a href="#cr%c3%a9dits" class="hash">#</a></h2>
+<p>Auteur  :       Lili Ricke</p>
+<p>Institution  :  Université de Montréal</p>
+<p>Professeur  :   Margot Mellet</p>
+<p>Date  :         20.04.2023</p>
+<p>Cours  :        FRA3825 Pratiques de l&rsquo;edition numérique</p>
+<h3 id="les-images"><strong>Les images</strong> <a href="#les-images" class="hash">#</a></h3>
+<ol>
+<li>
+<p>Maciarka (1899, 30 novembre). <em>Zemiakové placky</em>[image en ligne]. Wikimedia Commons. <a href="https://upload.wikimedia.org/wikipedia/commons/e/e9/Zemiakov%C3%A9_placky_%E3%82%BC%E3%83%9F%E3%82%A2%E3%82%B3%E3%83%99%E3%83%BC%E3%83%BB%E3%83%97%E3%83%A9%E3%83%84%E3%82%AD%E3%83%BC.JPG">https://upload.wikimedia.org/wikipedia/commons/e/e9/Zemiakov%C3%A9_placky_%E3%82%BC%E3%83%9F%E3%82%A2%E3%82%B3%E3%83%99%E3%83%BC%E3%83%BB%E3%83%97%E3%83%A9%E3%83%84%E3%82%AD%E3%83%BC.JPG</a>.</p>
+</li>
+<li>
 <p>Einfachkartoffel (2022, 1 février). <em>Bratkartoffeln-mit-Speck</em>[image en ligne]. <a href="https://upload.wikimedia.org/wikipedia/commons/e/e6/Bratkartoffeln-mit-Speck.jpg">https://upload.wikimedia.org/wikipedia/commons/e/e6/Bratkartoffeln-mit-Speck.jpg</a>.</p>
+</li>
+</ol>
 <p>Sousvideguy (2018, 31 mai). <em>Sous vide mashed potatoes</em>[image en ligne]. <a href="https://upload.wikimedia.org/wikipedia/commons/5/51/Sous_vide_mashed_potatoes.jpg">https://upload.wikimedia.org/wikipedia/commons/5/51/Sous_vide_mashed_potatoes.jpg</a>.</p>
 <p>SajjadF (2013, 23 avril). <em>Potato salad</em>[image en ligne]. <a href="https://upload.wikimedia.org/wikipedia/commons/e/e9/Potato_salad_%281%29.jpg">https://upload.wikimedia.org/wikipedia/commons/e/e9/Potato_salad_%281%29.jpg</a>.</p>
 <p>Schwäbin (2011, 26 janvier). <em>Auflauf mit Kartoffeln und Kohlrabi</em>[image en ligne]. <a href="https://commons.wikimedia.org/wiki/File:Auflauf_mit_Kartoffeln_und_Kohlrabi01.jpg">https://commons.wikimedia.org/wiki/File:Auflauf_mit_Kartoffeln_und_Kohlrabi01.jpg</a>.</p>
