--- a/print/index.html
+++ b/print/index.html
@@ -163,44 +163,87 @@ J&rsquo;espère que vous aimez ma page web et que je peux vous informer et diver
 <h3 id="les-images"><strong>Les images</strong> <a href="#les-images" class="hash">#</a></h3>
 <ol>
 <li>
-<p>Amédée Masclef (2001, 31 janvier). <em>234 Solanum tuberosum L</em>[image en ligne]. <a href="https://commons.wikimedia.org/wiki/File:234_Solanum_tuberosum_L.jpg">https://commons.wikimedia.org/wiki/File:234_Solanum_tuberosum_L.jpg</a>.</p>
+<p>Amédée Masclef (2001, 31 janvier). <em>234 Solanum tuberosum L.</em> [image en ligne]. <a href="https://commons.wikimedia.org/wiki/File:234_Solanum_tuberosum_L.jpg">https://commons.wikimedia.org/wiki/File:234_Solanum_tuberosum_L.jpg</a>.</p>
 </li>
 <li>
-<p>Einfachkartoffel (2022, 1 février). <em>Bratkartoffeln-mit-Speck</em>[image en ligne]. <a href="https://upload.wikimedia.org/wikipedia/commons/e/e6/Bratkartoffeln-mit-Speck.jpg">https://upload.wikimedia.org/wikipedia/commons/e/e6/Bratkartoffeln-mit-Speck.jpg</a>.</p>
+<p>Einfachkartoffel (2022, 1 février). <em>Bratkartoffeln-mit-Speck.</em> [image en ligne]. <a href="https://upload.wikimedia.org/wikipedia/commons/e/e6/Bratkartoffeln-mit-Speck.jpg">https://upload.wikimedia.org/wikipedia/commons/e/e6/Bratkartoffeln-mit-Speck.jpg</a>.</p>
 </li>
 <li>
-<p>Flickr. <em>Pomme de terre Bleue d&rsquo;Artois</em>.[image en ligne]. <a href="https://jardinage.ooreka.fr/astuce/voir/659501/pomme-de-terre-bleue-d-artois#:~:text=La%20pomme%20de%20terre%20bleue%20d%27Artois%20est%20une,de%20terre%20bleue%20d%27Artois%20%3A%20origine%20et%20caract%C3%A9ristiques">https://jardinage.ooreka.fr/astuce/voir/659501/pomme-de-terre-bleue-d-artois#:~:text=La%20pomme%20de%20terre%20bleue%20d%27Artois%20est%20une,de%20terre%20bleue%20d%27Artois%20%3A%20origine%20et%20caract%C3%A9ristiques</a>.</p>
+<p>Flickr. <em>Pomme de terre Bleue d&rsquo;Artois.</em> [image en ligne]. <a href="https://jardinage.ooreka.fr/astuce/voir/659501/pomme-de-terre-bleue-d-artois#:~:text=La%20pomme%20de%20terre%20bleue%20d%27Artois%20est%20une,de%20terre%20bleue%20d%27Artois%20%3A%20origine%20et%20caract%C3%A9ristiques">https://jardinage.ooreka.fr/astuce/voir/659501/pomme-de-terre-bleue-d-artois#:~:text=La%20pomme%20de%20terre%20bleue%20d%27Artois%20est%20une,de%20terre%20bleue%20d%27Artois%20%3A%20origine%20et%20caract%C3%A9ristiques</a>.</p>
 </li>
 <li>
-<p>Kostrez. <em>123RF</em>[image en ligne]. <a href="https://jardinage.ooreka.fr/astuce/voir/531297/pomme-de-terre-jeannette">https://jardinage.ooreka.fr/astuce/voir/531297/pomme-de-terre-jeannette</a>.</p>
+<p>Kostrez. <em>123RF.</em> [image en ligne]. <a href="https://jardinage.ooreka.fr/astuce/voir/531297/pomme-de-terre-jeannette">https://jardinage.ooreka.fr/astuce/voir/531297/pomme-de-terre-jeannette</a>.</p>
 </li>
 <li>
-<p>Maciarka (1899, 30 novembre). <em>Zemiakové placky</em>[image en ligne]. Wikimedia Commons. <a href="https://upload.wikimedia.org/wikipedia/commons/e/e9/Zemiakov%C3%A9_placky_%E3%82%BC%E3%83%9F%E3%82%A2%E3%82%B3%E3%83%99%E3%83%BC%E3%83%BB%E3%83%97%E3%83%A9%E3%83%84%E3%82%AD%E3%83%BC.JPG">https://upload.wikimedia.org/wikipedia/commons/e/e9/Zemiakov%C3%A9_placky_%E3%82%BC%E3%83%9F%E3%82%A2%E3%82%B3%E3%83%99%E3%83%BC%E3%83%BB%E3%83%97%E3%83%A9%E3%83%84%E3%82%AD%E3%83%BC.JPG</a>.</p>
+<p>Maciarka (1899, 30 novembre). <em>Zemiakové placky.</em> [image en ligne]. Wikimedia Commons. <a href="https://upload.wikimedia.org/wikipedia/commons/e/e9/Zemiakov%C3%A9_placky_%E3%82%BC%E3%83%9F%E3%82%A2%E3%82%B3%E3%83%99%E3%83%BC%E3%83%BB%E3%83%97%E3%83%A9%E3%83%84%E3%82%AD%E3%83%BC.JPG">https://upload.wikimedia.org/wikipedia/commons/e/e9/Zemiakov%C3%A9_placky_%E3%82%BC%E3%83%9F%E3%82%A2%E3%82%B3%E3%83%99%E3%83%BC%E3%83%BB%E3%83%97%E3%83%A9%E3%83%84%E3%82%AD%E3%83%BC.JPG</a>.</p>
 </li>
 <li>
-<p>MagentaCaracal (2002, 20 septembre). <em>variété de pommes de terre en France</em>[image en ligne]. <a href="https://fr.wikipedia.org/wiki/Vari%C3%A9t%C3%A9_de_pommes_de_terre#/media/Fichier:PXL_20220910_140838074.jpg">https://fr.wikipedia.org/wiki/Vari%C3%A9t%C3%A9_de_pommes_de_terre#/media/Fichier:PXL_20220910_140838074.jpg</a>.</p>
+<p>MagentaCaracal (2002, 20 septembre). <em>variété de pommes de terre en France.</em> [image en ligne]. <a href="https://fr.wikipedia.org/wiki/Vari%C3%A9t%C3%A9_de_pommes_de_terre#/media/Fichier:PXL_20220910_140838074.jpg">https://fr.wikipedia.org/wiki/Vari%C3%A9t%C3%A9_de_pommes_de_terre#/media/Fichier:PXL_20220910_140838074.jpg</a>.</p>
 </li>
 <li>
-<p>Ooreka. <em>Pomme de terre blanche</em>.[image en ligne]. <a href="https://jardinage.ooreka.fr/astuce/voir/342756/pomme-de-terre-blanche">https://jardinage.ooreka.fr/astuce/voir/342756/pomme-de-terre-blanche</a>.</p>
+<p>Ooreka. <em>Pomme de terre blanche.</em> [image en ligne]. <a href="https://jardinage.ooreka.fr/astuce/voir/342756/pomme-de-terre-blanche">https://jardinage.ooreka.fr/astuce/voir/342756/pomme-de-terre-blanche</a>.</p>
 </li>
 <li>
-<p>SajjadF (2013, 23 avril). <em>Potato salad</em>[image en ligne]. <a href="https://upload.wikimedia.org/wikipedia/commons/e/e9/Potato_salad_%281%29.jpg">https://upload.wikimedia.org/wikipedia/commons/e/e9/Potato_salad_%281%29.jpg</a>.</p>
+<p>SajjadF (2013, 23 avril). <em>Potato salad.</em> [image en ligne]. <a href="https://upload.wikimedia.org/wikipedia/commons/e/e9/Potato_salad_%281%29.jpg">https://upload.wikimedia.org/wikipedia/commons/e/e9/Potato_salad_%281%29.jpg</a>.</p>
 </li>
 <li>
-<p>Schwäbin (2011, 26 janvier). <em>Auflauf mit Kartoffeln und Kohlrabi</em>[image en ligne]. <a href="https://commons.wikimedia.org/wiki/File:Auflauf_mit_Kartoffeln_und_Kohlrabi01.jpg">https://commons.wikimedia.org/wiki/File:Auflauf_mit_Kartoffeln_und_Kohlrabi01.jpg</a>.</p>
+<p>Schwäbin (2011, 26 janvier). <em>Auflauf mit Kartoffeln und Kohlrabi.</em> [image en ligne]. <a href="https://commons.wikimedia.org/wiki/File:Auflauf_mit_Kartoffeln_und_Kohlrabi01.jpg">https://commons.wikimedia.org/wiki/File:Auflauf_mit_Kartoffeln_und_Kohlrabi01.jpg</a>.</p>
 </li>
 <li>
-<p>Sousvideguy (2018, 31 mai). <em>Sous vide mashed potatoes</em>[image en ligne]. <a href="https://upload.wikimedia.org/wikipedia/commons/5/51/Sous_vide_mashed_potatoes.jpg">https://upload.wikimedia.org/wikipedia/commons/5/51/Sous_vide_mashed_potatoes.jpg</a>.</p>
+<p>Sousvideguy (2018, 31 mai). <em>Sous vide mashed potatoes.</em> [image en ligne]. <a href="https://upload.wikimedia.org/wikipedia/commons/5/51/Sous_vide_mashed_potatoes.jpg">https://upload.wikimedia.org/wikipedia/commons/5/51/Sous_vide_mashed_potatoes.jpg</a>.</p>
 </li>
 <li>
-<p>Valérie75 (2005, 2 septembre). <em>Parmentier Antoine 1737-1813</em>[image en ligne]. <a href="https://upload.wikimedia.org/wikipedia/commons/e/ed/Parmentier_Antoine_1737-1813.jpg">https://upload.wikimedia.org/wikipedia/commons/e/ed/Parmentier_Antoine_1737-1813.jpg</a>.</p>
+<p>Valérie75 (2005, 2 septembre). <em>Parmentier Antoine 1737-1813.</em> [image en ligne]. <a href="https://upload.wikimedia.org/wikipedia/commons/e/ed/Parmentier_Antoine_1737-1813.jpg">https://upload.wikimedia.org/wikipedia/commons/e/ed/Parmentier_Antoine_1737-1813.jpg</a>.</p>
 </li>
 <li>
-<p>Viatours (2020). <em>Sauerland - Karte - Urlaub in Deutschland - Reiseführer viatoura</em>[image en ligne]. <a href="https://www.bing.com/images/search?view=detailV2&amp;ccid=NmNuhYO1&amp;id=DAC9D646938A4A9DABD826393C7D5B210381F575&amp;thid=OIP.NmNuhYO1BDzCBwBzT6BdKAHaKG&amp;mediaurl=https%3a%2f%2fwww.viatoura.de%2fimages%2fgermany%2fkarte_sauerland.gif&amp;cdnurl=https%3a%2f%2fth.bing.com%2fth%2fid%2fR.36636e8583b5043cc20700734fa05d28%3frik%3ddfWBAyFbfTw5Jg%26pid%3dImgRaw%26r%3d0&amp;exph=165&amp;expw=121&amp;q=sauerland+pfeil+deutschland+karte&amp;simid=608013218922448025&amp;FORM=IRPRST&amp;ck=D28C51C19E9C3B7E3BEC9160E175B7C7&amp;selectedIndex=81&amp;ajaxhist=0&amp;ajaxserp=0">https://www.bing.com/images/search?view=detailV2&amp;ccid=NmNuhYO1&amp;id=DAC9D646938A4A9DABD826393C7D5B210381F575&amp;thid=OIP.NmNuhYO1BDzCBwBzT6BdKAHaKG&amp;mediaurl=https%3a%2f%2fwww.viatoura.de%2fimages%2fgermany%2fkarte_sauerland.gif&amp;cdnurl=https%3a%2f%2fth.bing.com%2fth%2fid%2fR.36636e8583b5043cc20700734fa05d28%3frik%3ddfWBAyFbfTw5Jg%26pid%3dImgRaw%26r%3d0&amp;exph=165&amp;expw=121&amp;q=sauerland+pfeil+deutschland+karte&amp;simid=608013218922448025&amp;FORM=IRPRST&amp;ck=D28C51C19E9C3B7E3BEC9160E175B7C7&amp;selectedIndex=81&amp;ajaxhist=0&amp;ajaxserp=0</a>.</p>
+<p>Viatours (2020). <em>Sauerland - Karte - Urlaub in Deutschland - Reiseführer viatoura.</em> [image en ligne]. <a href="https://www.bing.com/images/search?view=detailV2&amp;ccid=NmNuhYO1&amp;id=DAC9D646938A4A9DABD826393C7D5B210381F575&amp;thid=OIP.NmNuhYO1BDzCBwBzT6BdKAHaKG&amp;mediaurl=https%3a%2f%2fwww.viatoura.de%2fimages%2fgermany%2fkarte_sauerland.gif&amp;cdnurl=https%3a%2f%2fth.bing.com%2fth%2fid%2fR.36636e8583b5043cc20700734fa05d28%3frik%3ddfWBAyFbfTw5Jg%26pid%3dImgRaw%26r%3d0&amp;exph=165&amp;expw=121&amp;q=sauerland+pfeil+deutschland+karte&amp;simid=608013218922448025&amp;FORM=IRPRST&amp;ck=D28C51C19E9C3B7E3BEC9160E175B7C7&amp;selectedIndex=81&amp;ajaxhist=0&amp;ajaxserp=0">https://www.bing.com/images/search?view=detailV2&amp;ccid=NmNuhYO1&amp;id=DAC9D646938A4A9DABD826393C7D5B210381F575&amp;thid=OIP.NmNuhYO1BDzCBwBzT6BdKAHaKG&amp;mediaurl=https%3a%2f%2fwww.viatoura.de%2fimages%2fgermany%2fkarte_sauerland.gif&amp;cdnurl=https%3a%2f%2fth.bing.com%2fth%2fid%2fR.36636e8583b5043cc20700734fa05d28%3frik%3ddfWBAyFbfTw5Jg%26pid%3dImgRaw%26r%3d0&amp;exph=165&amp;expw=121&amp;q=sauerland+pfeil+deutschland+karte&amp;simid=608013218922448025&amp;FORM=IRPRST&amp;ck=D28C51C19E9C3B7E3BEC9160E175B7C7&amp;selectedIndex=81&amp;ajaxhist=0&amp;ajaxserp=0</a>.</p>
 </li>
 </ol>
-<h3 id="les-pages-web">Les pages web <a href="#les-pages-web" class="hash">#</a></h3>
+<h3 id="les-pages-web"><strong>Les pages web</strong> <a href="#les-pages-web" class="hash">#</a></h3>
+<ol>
+<li>
+<p>Cuisineaz. <em>Pommes de terre sautées campagnarde.</em> Cuisineaz. <a href="https://www.cuisineaz.com/recettes/pommes-de-terre-sautees-campagnarde-54878.aspx">https://www.cuisineaz.com/recettes/pommes-de-terre-sautees-campagnarde-54878.aspx</a>.</p>
+</li>
+<li>
+<p>Giroux, David. <em>Purée de pommes de terre.</em> Mordu. <a href="https://ici.radio-canada.ca/mordu/recettes/1484/preparer-puree-pommes-terre">https://ici.radio-canada.ca/mordu/recettes/1484/preparer-puree-pommes-terre</a>.</p>
+</li>
+<li>
+<p>Jean et Lolotte. <em>Salade allemande aux pommes de terre.</em> Marmiton. <a href="%5Bhttps://www.marmiton.org/recettes/recette_salade-allemande-aux-pommes-de-terre_28039.aspx">https://www.marmiton.org/recettes/recette_salade-allemande-aux-pommes-de-terre_28039.aspx</a>.</p>
+</li>
+<li>
+<p>Les pommes de terre. <em>Origine de la pomme de terre.</em> Lespommesdeterre. <a href="https://www.lespommesdeterre.com/histoire/">https://www.lespommesdeterre.com/histoire/</a>.</p>
+</li>
+<li>
+<p>M., Patricia. <em>Gratin de pommes de terre.</em> Marmiton. <a href="https://www.marmiton.org/recettes/recette_gratin-de-pommes-de-terre_27775.aspx">https://www.marmiton.org/recettes/recette_gratin-de-pommes-de-terre_27775.aspx</a>.</p>
+</li>
+<li>
+<p>Ooreka. <em>Pomme de terre blanche.</em> Ooreka. <a href="%5Bhttps://jardinage.ooreka.fr/astuce/voir/342756/pomme-de-terre-blanche">https://jardinage.ooreka.fr/astuce/voir/342756/pomme-de-terre-blanche</a>.</p>
+</li>
+<li>
+<p>Ooreka. <em>Pomme de terre bleue d’Artois.</em> Ooreka. <a href="https://jardinage.ooreka.fr/astuce/voir/659501/pomme-de-terre-bleue-d-artois#:~:text=La%20pomme%20de%20terre%20bleue%20d%27Artois%20est%20une,de%20terre%20bleue%20d%27Artois%20%3A%20origine%20et%20caract%C3%A9ristiques">https://jardinage.ooreka.fr/astuce/voir/659501/pomme-de-terre-bleue-d-artois#:~:text=La%20pomme%20de%20terre%20bleue%20d%27Artois%20est%20une,de%20terre%20bleue%20d%27Artois%20%3A%20origine%20et%20caractéristiques</a>.</p>
+</li>
+<li>
+<p>Ooreka. <em>Pomme de terre Jeannette.</em> Ooreka. <a href="https://jardinage.ooreka.fr/astuce/voir/531297/pomme-de-terre-jeannette">https://jardinage.ooreka.fr/astuce/voir/531297/pomme-de-terre-jeannette</a>.</p>
+</li>
+<li>
 <p>Thomdrew. (2012, 1 février). <em>Galettes de pommes de terre.</em> Recettes du Québec. <a href="https://www.recettes.qc.ca/recettes/recette/galettes-de-pommes-de-terre-222118">https://www.recettes.qc.ca/recettes/recette/galettes-de-pommes-de-terre-222118</a>.</p>
+</li>
+<li>
+<p>Wikipédia. (2023, 5 février). <em>Antoine Parmentier.</em> Wikipédia. <a href="https://fr.wikipedia.org/wiki/Antoine_Parmentier">https://fr.wikipedia.org/wiki/Antoine_Parmentier</a>.</p>
+</li>
+<li>
+<p>Wikipédia. (2023, 7 janvier). <em>Bockwurst.</em> Wikipedia. <a href="https://fr.wikipedia.org/wiki/Bockwurst">https://fr.wikipedia.org/wiki/Bockwurst</a>.</p>
+</li>
+<li>
+<p>Wikipédia. (2023, 30 mars). <em>Cordillère des Andes.</em> Wikipédia. <a href="https://fr.wikipedia.org/wiki/Cordill%C3%A8re_des_Andes">https://fr.wikipedia.org/wiki/Cordillère_des_Andes</a>.</p>
+</li>
+<li>
+<p>Wikipédia. (2023, 11 avril). <em>Pomme de terre.</em> Wikipédia. <a href="https://fr.wikipedia.org/wiki/Pomme_de_terre#Histoire_et_diffusion_de_la_pomme_de_terre">https://fr.wikipedia.org/wiki/Pomme_de_terre#Histoire_et_diffusion_de_la_pomme_de_terre</a>.</p>
+</li>
+<li>
+<p>Wikipédia. (2022, 26 octobre). <em>Variété de pommes de terre.</em> Wikipédia. <a href="https://fr.wikipedia.org/wiki/Vari%C3%A9t%C3%A9_de_pommes_de_terre">https://fr.wikipedia.org/wiki/Variété_de_pommes_de_terre</a>.</p>
+</li>
+</ol>
 
     </div>
     </section>
