deploy: c220c9cb48145baa18ac1d579ec77c609dd8bd65

--- a/kartoffelauflauf/index.html
+++ b/kartoffelauflauf/index.html
@@ -10,12 +10,12 @@
 <meta name="twitter:card" content="summary"/>
 <meta name="twitter:title" content="Kartoffelauflauf"/>
 <meta name="twitter:description" content="Kartoffelauflauf ou gratin de pommes de terre # Temps 75 minutes
-Portions 4 portionss
+Portions 4 portions
 Les ingrédients # 1 kg de pomme de terre 100 g de gruyère râpé 85 g de beurre 250 ml de bouillon Sel et poivre au goût La préparation # Peler les pommes de terre et les couper en tranches extrêmement fines. Graisser un plat allant au four avec du beurre. Répartir toutes les tranches fines de pommes de terre dans le plat allant au four."/>
 
 <meta property="og:title" content="Kartoffelauflauf" />
 <meta property="og:description" content="Kartoffelauflauf ou gratin de pommes de terre # Temps 75 minutes
-Portions 4 portionss
+Portions 4 portions
 Les ingrédients # 1 kg de pomme de terre 100 g de gruyère râpé 85 g de beurre 250 ml de bouillon Sel et poivre au goût La préparation # Peler les pommes de terre et les couper en tranches extrêmement fines. Graisser un plat allant au four avec du beurre. Répartir toutes les tranches fines de pommes de terre dans le plat allant au four." />
 <meta property="og:type" content="article" />
 <meta property="og:url" content="/kartoffelauflauf/" /><meta property="article:section" content="posts" />
@@ -24,7 +24,7 @@ Les ingrédients # 1 kg de pomme de terre 100 g de gruyère râpé 85 g de beurr
 
 <meta itemprop="name" content="Kartoffelauflauf">
 <meta itemprop="description" content="Kartoffelauflauf ou gratin de pommes de terre # Temps 75 minutes
-Portions 4 portionss
+Portions 4 portions
 Les ingrédients # 1 kg de pomme de terre 100 g de gruyère râpé 85 g de beurre 250 ml de bouillon Sel et poivre au goût La préparation # Peler les pommes de terre et les couper en tranches extrêmement fines. Graisser un plat allant au four avec du beurre. Répartir toutes les tranches fines de pommes de terre dans le plat allant au four.">
 
 <meta itemprop="wordCount" content="207">
@@ -49,7 +49,7 @@ Les ingrédients # 1 kg de pomme de terre 100 g de gruyère râpé 85 g de beurr
     "name": "Kartoffelauflauf",
     "headline": "Kartoffelauflauf",
     "alternativeHeadline": "",
-    "description": "Kartoffelauflauf ou gratin de pommes de terre # Temps 75 minutes\nPortions 4 portionss\nLes ingrédients # 1 kg de pomme de terre 100 g de gruyère râpé 85 g de beurre 250 ml de bouillon Sel et poivre au goût La préparation # Peler les pommes de terre et les couper en tranches extrêmement fines. Graisser un plat allant au four avec du beurre. Répartir toutes les tranches fines de pommes de terre dans le plat allant au four.",
+    "description": "Kartoffelauflauf ou gratin de pommes de terre # Temps 75 minutes\nPortions 4 portions\nLes ingrédients # 1 kg de pomme de terre 100 g de gruyère râpé 85 g de beurre 250 ml de bouillon Sel et poivre au goût La préparation # Peler les pommes de terre et les couper en tranches extrêmement fines. Graisser un plat allant au four avec du beurre. Répartir toutes les tranches fines de pommes de terre dans le plat allant au four.",
     "inLanguage": "fr-fr",
     "isFamilyFriendly": "true",
     "mainEntityOfPage": {
@@ -153,7 +153,7 @@ Les ingrédients # 1 kg de pomme de terre 100 g de gruyère râpé 85 g de beurr
 <p><img src="../images/Kartoffelauflauf.JPG" alt="Le gratin de pommes de terre" loading="lazy" />
 </p>
 <p><strong>Temps</strong>       75 minutes</p>
-<p><strong>Portions</strong>    4 portionss</p>
+<p><strong>Portions</strong>    4 portions</p>
 <h3 id="les-ingrédients"><strong>Les ingrédients</strong> <a href="#les-ingr%c3%a9dients" class="hash">#</a></h3>
 <ul>
 <li>1 kg de pomme de terre</li>
