--- a/print/index.html
+++ b/print/index.html
@@ -331,7 +331,7 @@ Désormais, la pomme de terre devient de plus en plus importante et ne cesse de 
 <p><img src="../images/Kartoffelauflauf.JPG" alt="Le gratin de pommes de terre" loading="lazy" />
 </p>
 <p><strong>Temps</strong>       75 minutes</p>
-<p><strong>Portions</strong>    4 portionss</p>
+<p><strong>Portions</strong>    4 portions</p>
 <h3 id="les-ingrédients"><strong>Les ingrédients</strong> <a href="#les-ingr%c3%a9dients" class="hash">#</a></h3>
 <ul>
 <li>1 kg de pomme de terre</li>
