--- a/404.html
+++ b/404.html
@@ -37,6 +37,7 @@
   <main id="main" role="main">
 
       <header>
+    <link href='https://fonts.google.com/specimen/Indie+Flower' rel='stylesheet' type='text/css'>
     <nav class="site-navigation" role="navigation">
       
   <ul>
