--- a/about/index.html
+++ b/about/index.html
@@ -95,6 +95,7 @@ Je m&rsquo;appelle Lili et je suis actuellement étudiante en échange à l&rsqu
 <body>
 <main>
       <header>
+    <link href='https://fonts.google.com/specimen/Indie+Flower' rel='stylesheet' type='text/css'>
     <nav class="site-navigation" role="navigation">
       
   <ul>
