--- a/histoire/index.html
+++ b/histoire/index.html
@@ -92,6 +92,7 @@
 <body>
 <main>
       <header>
+    <link href='https://fonts.google.com/specimen/Indie+Flower' rel='stylesheet' type='text/css'>
     <nav class="site-navigation" role="navigation">
       
   <ul>
