--- a/index.html
+++ b/index.html
@@ -134,6 +134,7 @@
       </ul>
     </main>
       <header>
+    <link href='https://fonts.google.com/specimen/Indie+Flower' rel='stylesheet' type='text/css'>
     <nav class="site-navigation" role="navigation">
       
   <ul>
