--- a/kartoffelauflauf/index.html
+++ b/kartoffelauflauf/index.html
@@ -98,6 +98,7 @@ Les ingrédients # 1 kg de pomme de terre 100 g de gruyère râpé 85 g de beurr
 <body>
 <main>
       <header>
+    <link href='https://fonts.google.com/specimen/Indie+Flower' rel='stylesheet' type='text/css'>
     <nav class="site-navigation" role="navigation">
       
   <ul>
