--- a/kartoffelpüree/index.html
+++ b/kartoffelpüree/index.html
@@ -98,6 +98,7 @@ Les ingrédients # 1 kg de pommes de terre épluchées 200 ml de lait chaud 4 c.
 <body>
 <main>
       <header>
+    <link href='https://fonts.google.com/specimen/Indie+Flower' rel='stylesheet' type='text/css'>
     <nav class="site-navigation" role="navigation">
       
   <ul>
