deploy: 8ef1771c33a9383974130dbeca965e607fcfa0e0

--- a/print/index.html
+++ b/print/index.html
@@ -254,7 +254,9 @@ J&rsquo;espère que vous aimez ma page web et que je peux vous informer et diver
     <div class="contenu">
         <p>Dans l&rsquo;ensemble, ce document informe sur l&rsquo;histoire, la diversité et les recettes de la pomme de terre.
 Tout d&rsquo;abord, ce document traite de la diversité et de l&rsquo;histoire de la pomme de terre. Puis, cinq recettes différentes de pommes de terre sont répertoriées. Ces recettes sont des recettes pour le gratin de pommes de terre, les galettes de pomme de terre, la purée de pommes de terre, la salade de pomme de terre et les pommes de terre sautées au lardon.
-Bon appétit  !</p>
+Bon appétit  !
+<img src="../images/Emoji.png" alt="Bon appétit  !" loading="lazy" />
+</p>
 
     </div>
     </section>
