deploy: 3878d1175d82503f0a0e325912af082d85f0ff2f

--- a/kartoffelpueree/index.html
+++ b/kartoffelpueree/index.html
@@ -10,12 +10,12 @@
 <meta name="twitter:card" content="summary"/>
 <meta name="twitter:title" content="Kartoffelpüree"/>
 <meta name="twitter:description" content="Kartoffelpüree ou la purée de pommes de terre # Temps 30 minutes
-Portions 4 portions
+Portions 4 portionss
 Les ingrédients # 1 kg de pommes de terre épluchées 200 ml de lait chaud 4 c. à soupe de beurre Sel et poivre au goût La préparation # Les pommes de terre sont bouillies dans une casserole avec de l’eau salée. Elles sont cuites jusqu’à ce qu’elles deviennent molles. Environ 20 minutes. Après cela, vidangez l’eau."/>
 
 <meta property="og:title" content="Kartoffelpüree" />
 <meta property="og:description" content="Kartoffelpüree ou la purée de pommes de terre # Temps 30 minutes
-Portions 4 portions
+Portions 4 portionss
 Les ingrédients # 1 kg de pommes de terre épluchées 200 ml de lait chaud 4 c. à soupe de beurre Sel et poivre au goût La préparation # Les pommes de terre sont bouillies dans une casserole avec de l’eau salée. Elles sont cuites jusqu’à ce qu’elles deviennent molles. Environ 20 minutes. Après cela, vidangez l’eau." />
 <meta property="og:type" content="article" />
 <meta property="og:url" content="/kartoffelpueree/" /><meta property="article:section" content="posts" />
@@ -24,7 +24,7 @@ Les ingrédients # 1 kg de pommes de terre épluchées 200 ml de lait chaud 4 c.
 
 <meta itemprop="name" content="Kartoffelpüree">
 <meta itemprop="description" content="Kartoffelpüree ou la purée de pommes de terre # Temps 30 minutes
-Portions 4 portions
+Portions 4 portionss
 Les ingrédients # 1 kg de pommes de terre épluchées 200 ml de lait chaud 4 c. à soupe de beurre Sel et poivre au goût La préparation # Les pommes de terre sont bouillies dans une casserole avec de l’eau salée. Elles sont cuites jusqu’à ce qu’elles deviennent molles. Environ 20 minutes. Après cela, vidangez l’eau.">
 
 <meta itemprop="wordCount" content="216">
@@ -49,7 +49,7 @@ Les ingrédients # 1 kg de pommes de terre épluchées 200 ml de lait chaud 4 c.
     "name": "Kartoffelpüree",
     "headline": "Kartoffelpüree",
     "alternativeHeadline": "",
-    "description": "Kartoffelpüree ou la purée de pommes de terre # Temps 30 minutes\nPortions 4 portions\nLes ingrédients # 1 kg de pommes de terre épluchées 200 ml de lait chaud 4 c. à soupe de beurre Sel et poivre au goût La préparation # Les pommes de terre sont bouillies dans une casserole avec de l’eau salée. Elles sont cuites jusqu’à ce qu’elles deviennent molles. Environ 20 minutes. Après cela, vidangez l’eau.",
+    "description": "Kartoffelpüree ou la purée de pommes de terre # Temps 30 minutes\nPortions 4 portionss\nLes ingrédients # 1 kg de pommes de terre épluchées 200 ml de lait chaud 4 c. à soupe de beurre Sel et poivre au goût La préparation # Les pommes de terre sont bouillies dans une casserole avec de l’eau salée. Elles sont cuites jusqu’à ce qu’elles deviennent molles. Environ 20 minutes. Après cela, vidangez l’eau.",
     "inLanguage": "fr-fr",
     "isFamilyFriendly": "true",
     "mainEntityOfPage": {
@@ -154,7 +154,7 @@ Les ingrédients # 1 kg de pommes de terre épluchées 200 ml de lait chaud 4 c.
 <p><img src="../images/Kartoffelp%c3%bcree.jpg" alt="La purée de pommes de terre" loading="lazy" />
 </p>
 <p><strong>Temps</strong>       30 minutes</p>
-<p><strong>Portions</strong>    4 portions</p>
+<p><strong>Portions</strong>    4 portionss</p>
 <h3 id="les-ingrédients"><strong>Les ingrédients</strong> <a href="#les-ingr%c3%a9dients" class="hash">#</a></h3>
 <ul>
 <li>1 kg de pommes de terre épluchées</li>
