deploy: c3822292ff0809b55cd9d32468350645127f783e

--- a/print/index.html
+++ b/print/index.html
@@ -401,7 +401,7 @@ Désormais, la pomme de terre devient de plus en plus importante et ne cesse de 
 <p><img src="../images/Kartoffelp%c3%bcree.jpg" alt="La purée de pommes de terre" loading="lazy" />
 </p>
 <p><strong>Temps</strong>       30 minutes</p>
-<p><strong>Portions</strong>    4 portionss</p>
+<p><strong>Portions</strong>    4 portions</p>
 <h3 id="les-ingrédients"><strong>Les ingrédients</strong> <a href="#les-ingr%c3%a9dients" class="hash">#</a></h3>
 <ul>
 <li>1 kg de pommes de terre épluchées</li>
